reorganize cancer pipleine

--- a/nb/eval/eval_cancerPipeline.ipynb
+++ b/nb/eval/eval_cancerPipeline.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/swei20/sketch-scale'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sys.path.insert(0, '../..')"
+    "sys.path.insert(0, '../..')\n",
+    "os.chdir(\"/home/swei20/sketch-scale/\")\n",
+    "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,16 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.argv = ['eval_cancerPipeline', '--config', \"/home/swei20/sketch-scale/src/configs/cancerConfig_test.json\"]"
+    "sys.argv = ['eval_cancerPipeline', '--config', \"./src/configs/cancerConfig.json\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,57 +84,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Output directory is ../../out\n",
-      "INFO:root:saving dict_items([('mat', False), ('mask', False), ('maskId', None)])\n"
+      "INFO:root:Output directory is ./out/cancer/\n",
+      "INFO:root:saving dict_items([('stream', False), ('HH', True), ('UMAP', True), ('KMAP', True)])\n",
+      "INFO:root:saving dict_items([('mat', False), ('mask', False), ('maskId', None)])\n",
+      "INFO:root:  Loading # 1 image(s) \n",
+      "INFO:root:  Loaded dataset with shapes: 400 300\n",
+      "INFO:root:=============== PCA: 8 ===============\n",
+      "INFO:root:Explained Variance Ratio [0.954 0.002 0.002 0.002 0.002 0.002 0.001 0.001 0.001 0.001 0.001 0.001\n",
+      " 0.001 0.001 0.001 0.001 0.001 0.001 0.001 0.001 0.001 0.001 0.001 0.001\n",
+      " 0.001 0.001 0.001 0.001 0.001 0.001 0.001 0.001 0.001 0.001 0.001]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'seed': 112, 'test': True, 'name': 'test', 'out': './out/cancer/', 'dim': 8, 'base': 22, 'dtype': 'uint64', 'dfNorm': None, 'saveStream': False, 'sketchMode': 'exact', 'topk': None, 'csParams': None, 'ratio': 1.0, 'saveHH': True, 'nCluster': 10, 'saveUMAP': True, 'saveKMAP': True, 'nImg': 1, 'smooth': None, 'saveMat': False, 'saveMask': False, 'maskId': 0, 'cutoff': None, 'in': '/scratch/ceph/szalay/swei20/cancerHH/AceCanZ/data/bki', 'sci': False}\n",
       "Output directory not Empty, Replacing might occurs\n"
      ]
-    }
-   ],
-   "source": [
-    "cp.prepare()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:  Loading # 1 image(s) \n",
-      "INFO:root:  Loaded dataset with shapes: 1004 1344\n",
-      "INFO:root:=============== PCA: 8 ===============\n",
-      "INFO:root:Explained Variance Ratio [0.74  0.132 0.072 0.038 0.011 0.003 0.001 0.001 0.    0.    0.    0.\n",
-      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      " 0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.   ]\n",
-      "INFO:root: PCA output Shape:  (1349376, 8)\n",
-      "INFO:root:stream length m = 689382\n",
-      "INFO:root: cutoff @:  [250.]\n"
+      "INFO:root: PCA output Shape:  (120000, 8)\n",
+      "INFO:root:stream length m = 118199\n",
+      "INFO:root: cutoff @:  0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "samples: 118199 ftrs: 8 base: 22\n",
+      "=============exact counting HHs==============\n",
+      "exact counting time:0.04\n",
+      "       0   1   2   3   4   5   6   7            HH   freq        rk        ra\n",
+      "0      0  16  16  16  16  16  16  16  4.181019e+10  986.0     986.0  0.008342\n",
+      "1      0  17  16  16  16  16  16  16  4.181019e+10  832.0    1818.0  0.015381\n",
+      "2      0  16  16  17  16  16  16  16  4.181020e+10  769.0    2587.0  0.021887\n",
+      "3      0  16  16  16  16  16  17  16  4.192357e+10  738.0    3325.0  0.028131\n",
+      "4      0  16  16  16  16  17  16  16  4.181534e+10  722.0    4047.0  0.034239\n",
+      "...   ..  ..  ..  ..  ..  ..  ..  ..           ...    ...       ...       ...\n",
+      "12073  0  15  16  15  17  18  17  16  4.193410e+10    1.0  118195.0  0.999966\n",
+      "12074  0  17  17  17  18  17  17  14  3.694049e+10    1.0  118196.0  0.999975\n",
+      "12075  0  17  18  16  19  15  15  16  4.169236e+10    1.0  118197.0  0.999983\n",
+      "12076  0  16  17  17  15  14  15  17  4.418064e+10    1.0  118198.0  0.999992\n",
+      "12077  0  15  16  17  17  16  17  19  4.940689e+10    1.0  118199.0  1.000000\n",
+      "\n",
+      "[12078 rows x 12 columns]\n",
+      "{'stream': False, 'HH': True, 'UMAP': True, 'KMAP': True}\n"
      ]
     }
    ],
    "source": [
-    "dfNorm = cp.run(saveNorm=True)"
+    "cp.execute()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -145,71 +174,113 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>d0</th>\n",
-       "      <th>d1</th>\n",
-       "      <th>d2</th>\n",
-       "      <th>d3</th>\n",
-       "      <th>d4</th>\n",
-       "      <th>d5</th>\n",
-       "      <th>d6</th>\n",
-       "      <th>d7</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>HH</th>\n",
+       "      <th>freq</th>\n",
+       "      <th>rk</th>\n",
+       "      <th>ra</th>\n",
+       "      <th>u1</th>\n",
+       "      <th>u2</th>\n",
+       "      <th>k10</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.107121</td>\n",
-       "      <td>0.738725</td>\n",
-       "      <td>0.845613</td>\n",
-       "      <td>0.804681</td>\n",
-       "      <td>0.621779</td>\n",
-       "      <td>0.605547</td>\n",
-       "      <td>0.599121</td>\n",
-       "      <td>0.600896</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4.181019e+10</td>\n",
+       "      <td>986.0</td>\n",
+       "      <td>986.0</td>\n",
+       "      <td>0.008342</td>\n",
+       "      <td>10.028218</td>\n",
+       "      <td>4.045768</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.121556</td>\n",
-       "      <td>0.753359</td>\n",
-       "      <td>0.874972</td>\n",
-       "      <td>0.791080</td>\n",
-       "      <td>0.622210</td>\n",
-       "      <td>0.593437</td>\n",
-       "      <td>0.598288</td>\n",
-       "      <td>0.598121</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4.181019e+10</td>\n",
+       "      <td>832.0</td>\n",
+       "      <td>1818.0</td>\n",
+       "      <td>0.015381</td>\n",
+       "      <td>13.575944</td>\n",
+       "      <td>4.869986</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.116791</td>\n",
-       "      <td>0.759038</td>\n",
-       "      <td>0.878839</td>\n",
-       "      <td>0.765659</td>\n",
-       "      <td>0.628680</td>\n",
-       "      <td>0.586092</td>\n",
-       "      <td>0.601528</td>\n",
-       "      <td>0.603424</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4.181020e+10</td>\n",
+       "      <td>769.0</td>\n",
+       "      <td>2587.0</td>\n",
+       "      <td>0.021887</td>\n",
+       "      <td>10.637303</td>\n",
+       "      <td>4.243138</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.102127</td>\n",
-       "      <td>0.759711</td>\n",
-       "      <td>0.876359</td>\n",
-       "      <td>0.717180</td>\n",
-       "      <td>0.624526</td>\n",
-       "      <td>0.581857</td>\n",
-       "      <td>0.600687</td>\n",
-       "      <td>0.613007</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4.192357e+10</td>\n",
+       "      <td>738.0</td>\n",
+       "      <td>3325.0</td>\n",
+       "      <td>0.028131</td>\n",
+       "      <td>9.891493</td>\n",
+       "      <td>4.359794</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.086537</td>\n",
-       "      <td>0.751681</td>\n",
-       "      <td>0.870540</td>\n",
-       "      <td>0.647160</td>\n",
-       "      <td>0.618729</td>\n",
-       "      <td>0.565642</td>\n",
-       "      <td>0.604822</td>\n",
-       "      <td>0.614950</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4.181534e+10</td>\n",
+       "      <td>722.0</td>\n",
+       "      <td>4047.0</td>\n",
+       "      <td>0.034239</td>\n",
+       "      <td>9.994852</td>\n",
+       "      <td>4.081882</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -221,105 +292,154 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>689377</th>\n",
-       "      <td>0.009724</td>\n",
-       "      <td>0.579681</td>\n",
-       "      <td>0.542491</td>\n",
-       "      <td>0.657564</td>\n",
-       "      <td>0.563439</td>\n",
-       "      <td>0.604214</td>\n",
-       "      <td>0.616749</td>\n",
-       "      <td>0.657772</td>\n",
+       "      <th>12072</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>18</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>4.442354e+10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>118194.0</td>\n",
+       "      <td>0.999958</td>\n",
+       "      <td>9.605368</td>\n",
+       "      <td>2.423257</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>689378</th>\n",
-       "      <td>0.013174</td>\n",
-       "      <td>0.606060</td>\n",
-       "      <td>0.530437</td>\n",
-       "      <td>0.666975</td>\n",
-       "      <td>0.551956</td>\n",
-       "      <td>0.608038</td>\n",
-       "      <td>0.614290</td>\n",
-       "      <td>0.665491</td>\n",
+       "      <th>12073</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>16</td>\n",
+       "      <td>15</td>\n",
+       "      <td>17</td>\n",
+       "      <td>18</td>\n",
+       "      <td>17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4.193410e+10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>118195.0</td>\n",
+       "      <td>0.999966</td>\n",
+       "      <td>9.023235</td>\n",
+       "      <td>3.696219</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>689379</th>\n",
-       "      <td>0.010139</td>\n",
-       "      <td>0.590363</td>\n",
-       "      <td>0.571060</td>\n",
-       "      <td>0.675751</td>\n",
-       "      <td>0.587613</td>\n",
-       "      <td>0.619372</td>\n",
-       "      <td>0.632167</td>\n",
-       "      <td>0.671267</td>\n",
+       "      <th>12074</th>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>18</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3.694049e+10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>118196.0</td>\n",
+       "      <td>0.999975</td>\n",
+       "      <td>11.491591</td>\n",
+       "      <td>6.619841</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>689380</th>\n",
-       "      <td>0.021661</td>\n",
-       "      <td>0.562911</td>\n",
-       "      <td>0.565627</td>\n",
-       "      <td>0.665689</td>\n",
-       "      <td>0.595155</td>\n",
-       "      <td>0.597269</td>\n",
-       "      <td>0.615128</td>\n",
-       "      <td>0.740274</td>\n",
+       "      <th>12075</th>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>18</td>\n",
+       "      <td>16</td>\n",
+       "      <td>19</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4.169236e+10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>118197.0</td>\n",
+       "      <td>0.999983</td>\n",
+       "      <td>12.084125</td>\n",
+       "      <td>7.755812</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>689381</th>\n",
-       "      <td>0.016046</td>\n",
-       "      <td>0.555148</td>\n",
-       "      <td>0.552735</td>\n",
-       "      <td>0.663147</td>\n",
-       "      <td>0.552355</td>\n",
-       "      <td>0.587779</td>\n",
-       "      <td>0.648719</td>\n",
-       "      <td>0.681039</td>\n",
+       "      <th>12076</th>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>15</td>\n",
+       "      <td>14</td>\n",
+       "      <td>15</td>\n",
+       "      <td>17</td>\n",
+       "      <td>4.418064e+10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>118198.0</td>\n",
+       "      <td>0.999992</td>\n",
+       "      <td>10.508032</td>\n",
+       "      <td>5.381413</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>689382 rows × 8 columns</p>\n",
+       "<p>12077 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              d0        d1        d2        d3        d4        d5        d6  \\\n",
-       "0       0.107121  0.738725  0.845613  0.804681  0.621779  0.605547  0.599121   \n",
-       "1       0.121556  0.753359  0.874972  0.791080  0.622210  0.593437  0.598288   \n",
-       "2       0.116791  0.759038  0.878839  0.765659  0.628680  0.586092  0.601528   \n",
-       "3       0.102127  0.759711  0.876359  0.717180  0.624526  0.581857  0.600687   \n",
-       "4       0.086537  0.751681  0.870540  0.647160  0.618729  0.565642  0.604822   \n",
-       "...          ...       ...       ...       ...       ...       ...       ...   \n",
-       "689377  0.009724  0.579681  0.542491  0.657564  0.563439  0.604214  0.616749   \n",
-       "689378  0.013174  0.606060  0.530437  0.666975  0.551956  0.608038  0.614290   \n",
-       "689379  0.010139  0.590363  0.571060  0.675751  0.587613  0.619372  0.632167   \n",
-       "689380  0.021661  0.562911  0.565627  0.665689  0.595155  0.597269  0.615128   \n",
-       "689381  0.016046  0.555148  0.552735  0.663147  0.552355  0.587779  0.648719   \n",
+       "       0   1   2   3   4   5   6   7            HH   freq        rk        ra  \\\n",
+       "0      0  16  16  16  16  16  16  16  4.181019e+10  986.0     986.0  0.008342   \n",
+       "1      0  17  16  16  16  16  16  16  4.181019e+10  832.0    1818.0  0.015381   \n",
+       "2      0  16  16  17  16  16  16  16  4.181020e+10  769.0    2587.0  0.021887   \n",
+       "3      0  16  16  16  16  16  17  16  4.192357e+10  738.0    3325.0  0.028131   \n",
+       "4      0  16  16  16  16  17  16  16  4.181534e+10  722.0    4047.0  0.034239   \n",
+       "...   ..  ..  ..  ..  ..  ..  ..  ..           ...    ...       ...       ...   \n",
+       "12072  0  15  15  15  18  17  17  17  4.442354e+10    1.0  118194.0  0.999958   \n",
+       "12073  0  15  16  15  17  18  17  16  4.193410e+10    1.0  118195.0  0.999966   \n",
+       "12074  0  17  17  17  18  17  17  14  3.694049e+10    1.0  118196.0  0.999975   \n",
+       "12075  0  17  18  16  19  15  15  16  4.169236e+10    1.0  118197.0  0.999983   \n",
+       "12076  0  16  17  17  15  14  15  17  4.418064e+10    1.0  118198.0  0.999992   \n",
        "\n",
-       "              d7  \n",
-       "0       0.600896  \n",
-       "1       0.598121  \n",
-       "2       0.603424  \n",
-       "3       0.613007  \n",
-       "4       0.614950  \n",
-       "...          ...  \n",
-       "689377  0.657772  \n",
-       "689378  0.665491  \n",
-       "689379  0.671267  \n",
-       "689380  0.740274  \n",
-       "689381  0.681039  \n",
+       "              u1        u2  k10  \n",
+       "0      10.028218  4.045768    1  \n",
+       "1      13.575944  4.869986    7  \n",
+       "2      10.637303  4.243138    1  \n",
+       "3       9.891493  4.359794    1  \n",
+       "4       9.994852  4.081882    1  \n",
+       "...          ...       ...  ...  \n",
+       "12072   9.605368  2.423257    3  \n",
+       "12073   9.023235  3.696219    6  \n",
+       "12074  11.491591  6.619841    4  \n",
+       "12075  12.084125  7.755812    9  \n",
+       "12076  10.508032  5.381413    1  \n",
        "\n",
-       "[689382 rows x 8 columns]"
+       "[12077 rows x 15 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfNorm"
+    "cp.dfEmbed"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
