fix bug in star pipeline

--- a/nb/eval/eval_starDataset.ipynb
+++ b/nb/eval/eval_starDataset.ipynb
@@ -80,6 +80,229 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = sd.dfSpecNorm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = slice(None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ug</th>\n",
+       "      <th>ur</th>\n",
+       "      <th>ui</th>\n",
+       "      <th>uz</th>\n",
+       "      <th>gz</th>\n",
+       "      <th>gi</th>\n",
+       "      <th>gr</th>\n",
+       "      <th>rz</th>\n",
+       "      <th>ri</th>\n",
+       "      <th>iz</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.47</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.47</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ug   ur   ui   uz    gz   gi   gr   rz   ri   iz\n",
+       "0 0.12 0.07 0.03 0.01 -0.02 0.00 0.04 0.03 0.05 0.07\n",
+       "1 0.47 0.66 0.73 0.77  0.39 0.34 0.27 0.20 0.16 0.13\n",
+       "2 0.46 0.67 0.76 0.81  0.44 0.39 0.30 0.23 0.18 0.14\n",
+       "3 0.26 0.26 0.26 0.23  0.06 0.09 0.09 0.06 0.09 0.06\n",
+       "4 0.15 0.14 0.11 0.08  0.02 0.05 0.08 0.04 0.07 0.06\n",
+       "5 0.10 0.09 0.15 0.24  0.23 0.15 0.08 0.24 0.16 0.17\n",
+       "6 0.16 0.15 0.13 0.12  0.06 0.07 0.08 0.07 0.08 0.08\n",
+       "7 0.17 0.13 0.10 0.05 -0.03 0.02 0.05 0.01 0.06 0.04\n",
+       "8 0.47 0.66 0.73 0.77  0.40 0.35 0.28 0.20 0.16 0.14\n",
+       "9 0.16 0.17 0.16 0.15  0.07 0.09 0.10 0.07 0.08 0.08"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.iloc[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
    "outputs": [],
