--- a/nb/eval/eval_cancerPipeline.ipynb
+++ b/nb/eval/eval_cancerPipeline.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "'/home/swei20/sketch-scale'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,9 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,16 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.argv = ['eval_cancerPipeline', '--config', \"./src/configs/cancerConfig.json\"]"
+    "sys.argv = ['eval_cancerPipeline', '--config', \"./src/configs/cancerConfig.json\", \"--name\", \"run1\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +115,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'seed': 112, 'test': True, 'name': 'test', 'out': './out/cancer/', 'dim': 8, 'base': 22, 'dtype': 'uint64', 'dfNorm': None, 'saveStream': False, 'sketchMode': 'exact', 'topk': None, 'csParams': None, 'ratio': 1.0, 'saveHH': True, 'nCluster': 10, 'saveUMAP': True, 'saveKMAP': True, 'nImg': 1, 'smooth': None, 'saveMat': False, 'saveMask': False, 'maskId': 0, 'cutoff': None, 'in': '/scratch/ceph/szalay/swei20/cancerHH/AceCanZ/data/bki', 'sci': False}\n",
+      "self.args {'config': './src/configs/cancerConfig.json', 'seed': None, 'test': None, 'name': 'run1', 'in': None, 'out': None, 'dim': None, 'base': None, 'dtype': None, 'dfNorm': None, 'sketchMode': None, 'topk': None, 'csParams': None, 'ratio': None, 'emDim': None, 'nCluster': None, 'saveStream': None, 'saveHH': None, 'saveUMAP': None, 'saveKMAP': None, 'nImg': None, 'smooth': None, 'saveMat': None, 'saveMask': None, 'maskId': None, 'cutoff': None}\n",
+      "configArg {'config': ['./src/configs/sketchConfig.json'], 'in': '/scratch/ceph/szalay/swei20/cancerHH/AceCanZ/data/bki', 'out': './out/cancer/', 'name': 'test', 'nImg': 1, 'dim': 8, 'saveMat': False, 'saveMask': False, 'maskId': 0}\n",
+      "args {'seed': None, 'test': None, 'name': 'run1', 'in': '/scratch/ceph/szalay/swei20/cancerHH/AceCanZ/data/bki', 'out': './out/cancer/', 'dim': 8, 'base': None, 'dtype': None, 'dfNorm': None, 'sketchMode': None, 'topk': None, 'csParams': None, 'ratio': None, 'emDim': None, 'nCluster': None, 'saveStream': None, 'saveHH': None, 'saveUMAP': None, 'saveKMAP': None, 'nImg': 1, 'smooth': None, 'saveMat': False, 'saveMask': False, 'maskId': 0, 'cutoff': None, 'config': ['./src/configs/sketchConfig.json']}\n",
+      "configArg {'seed': 112, 'test': True, 'base': 22, 'dtype': 'uint64', 'saveStream': False, 'sketchMode': 'exact', 'ratio': 1.0, 'saveHH': True, 'nCluster': 10, 'saveUMAP': True, 'saveKMAP': True, 'sci': False}\n",
+      "args {'seed': 112, 'test': True, 'name': 'run1', 'in': '/scratch/ceph/szalay/swei20/cancerHH/AceCanZ/data/bki', 'out': './out/cancer/', 'dim': 8, 'base': 22, 'dtype': 'uint64', 'dfNorm': None, 'sketchMode': 'exact', 'topk': None, 'csParams': None, 'ratio': 1.0, 'emDim': None, 'nCluster': 10, 'saveStream': False, 'saveHH': True, 'saveUMAP': True, 'saveKMAP': True, 'nImg': 1, 'smooth': None, 'saveMat': False, 'saveMask': False, 'maskId': 0, 'cutoff': None, 'sci': False}\n",
+      "get_configArgs {'seed': 112, 'test': True, 'name': 'run1', 'in': '/scratch/ceph/szalay/swei20/cancerHH/AceCanZ/data/bki', 'out': './out/cancer/', 'dim': 8, 'base': 22, 'dtype': 'uint64', 'dfNorm': None, 'sketchMode': 'exact', 'topk': None, 'csParams': None, 'ratio': 1.0, 'emDim': None, 'nCluster': 10, 'saveStream': False, 'saveHH': True, 'saveUMAP': True, 'saveKMAP': True, 'nImg': 1, 'smooth': None, 'saveMat': False, 'saveMask': False, 'maskId': 0, 'cutoff': None, 'sci': False}\n",
+      "{'seed': 112, 'test': True, 'name': 'run1', 'in': '/scratch/ceph/szalay/swei20/cancerHH/AceCanZ/data/bki', 'out': './out/cancer/', 'dim': 8, 'base': 22, 'dtype': 'uint64', 'dfNorm': None, 'sketchMode': 'exact', 'topk': None, 'csParams': None, 'ratio': 1.0, 'emDim': None, 'nCluster': 10, 'saveStream': False, 'saveHH': True, 'saveUMAP': True, 'saveKMAP': True, 'nImg': 1, 'smooth': None, 'saveMat': False, 'saveMask': False, 'maskId': 0, 'cutoff': None, 'sci': False}\n",
       "Output directory not Empty, Replacing might occurs\n"
      ]
     },
@@ -125,7 +140,7 @@
      "text": [
       "samples: 118199 ftrs: 8 base: 22\n",
       "=============exact counting HHs==============\n",
-      "exact counting time:0.15\n",
+      "exact counting time:0.04\n",
       "       0   1   2   3   4   5   6   7            HH   freq        rk        ra\n",
       "0      0  16  16  16  16  16  16  16  4.181019e+10  986.0     986.0  0.008342\n",
       "1      0  17  16  16  16  16  16  16  4.181019e+10  832.0    1818.0  0.015381\n",
